feat: more flexible validation
- support for records without profiles
- support for records with multiple profiles
- support for multiple profile attribute keys/types
- support for additional attributes
- in general, attribute validation and profile validation are now separate tasks